# smart_polaris

./: .gitignore  .gitmodules  Dockerfile  README.md  entrypoint.sh
polaris_state_manager/gem_state_manager/include/gem_state_manager/: state_machine.h  state_manager.h
polaris_state_manager/gem_state_manager/nodes/: state_manager_node.cpp
polaris_state_manager/gem_state_manager/src/: state_manager.cpp
polaris_state_manager/gem_state_msgs/: CMakeLists.txt  package.xml
polaris_state_manager/gem_state_msgs/msg/: BatteryLevelStamped.msg  EstopStamped.msg  GpsAccuracyStamped.msg  SignalStrengthStamped.msg
resources/: rosdep-skip.yaml
runners/: build_dev_docker.sh  launch_integration_run.sh  run_docker.sh  run_integration_tests.sh  run_state_manager_rostests.sh  run_variables.sh
scripts/: entrypoint.sh
smart_polaris_gem_e2/polaris_integration_tests/gem_integration_tests/: CMakeLists.txt  package.xml
smart_polaris_gem_e2/polaris_integration_tests/gem_integration_tests/launch/: gem_gazebo_rviz.launch  integration_test.launch
smart_polaris_gem_e2/polaris_integration_tests/gem_integration_tests/rviz/: gem_integration_tests.rviz
smart_polaris_gem_e2/polaris_integration_tests/gem_integration_tests/scripts/: status_overlay_node.py
smart_polaris_gem_e2/polaris_integration_tests/gem_integration_tests/test/: integration_test_scenarios.py  integration_test_scenarios.test
smart_polaris_gem_e2/polaris_integration_tests/gem_performance_profiler/: CMakeLists.txt  package.xml
smart_polaris_gem_e2/polaris_integration_tests/gem_performance_profiler/scripts/: analyze_rosbags.py  fake_get_model_state_node.py  run_error_timing_profiler.py
smart_polaris_gem_e2/polaris_integration_tests/gem_performance_profiler/src/gem_performance_profiler/: __init__.py  performance_scenarios.py
smart_polaris_gem_e2/polaris_state_manager/gem_state_manager/: package.xml
smart_polaris_gem_e2/polaris_state_manager/gem_state_manager/include/gem_state_manager/: ros_time_helpers.h  state_machine.h
smart_polaris_gem_e2/polaris_state_manager/gem_state_manager/test/: state_manager_scenarios.cpp
smart_polaris_gem_e2/polaris_state_manager/gem_state_msgs/msg/: SystemStateStamped.msg  TaskPlannerStatus.msg
smart_polaris_gem_e2/polaris_task_planner/gem_controller_action/: CMakeLists.txt  package.xml
smart_polaris_gem_e2/polaris_task_planner/gem_pure_pursuit_sim_v2/: CMakeLists.txt  package.xml
smart_polaris_gem_e2/polaris_task_planner/gem_stanley_sim_v2/: CMakeLists.txt  package.xml
smart_polaris_gem_e2/polaris_task_planner/gem_stanley_sim_v2/scripts/: stanley_sim.py
smart_polaris_gem_e2/polaris_task_planner/gem_task_planner/: CMakeLists.txt  package.xml
smart_polaris_gem_e2/polaris_task_planner/gem_task_planner/scripts/: task_planner_node.py
steer_polaris_gem_e2/polaris_integration_tests/gem_integration_tests/: CMakeLists.txt  README.md  package.xml
steer_polaris_gem_e2/polaris_integration_tests/gem_integration_tests/cfg/: MockStateSignals.cfg
steer_polaris_gem_e2/polaris_integration_tests/gem_integration_tests/docs/: MockStateSignalsConfig-usage.dox  MockStateSignalsConfig.dox  MockStateSignalsConfig.wikidoc
steer_polaris_gem_e2/polaris_integration_tests/gem_integration_tests/launch/: integration_test.launch
steer_polaris_gem_e2/polaris_integration_tests/gem_integration_tests/rqt/: integration.perspective
steer_polaris_gem_e2/polaris_integration_tests/gem_integration_tests/rviz/: gem_integration_tests.rviz
steer_polaris_gem_e2/polaris_integration_tests/gem_integration_tests/scripts/: mock_state_signals_node.py
steer_polaris_gem_e2/polaris_integration_tests/gem_integration_tests/src/gem_integration_tests/cfg/: MockStateSignalsConfig.py
steer_polaris_gem_e2/polaris_integration_tests/gem_integration_tests/test/: integration_test_scenarios.py  integration_test_scenarios.test
steer_polaris_gem_e2/polaris_integration_tests/gem_performance_profiler/: CMakeLists.txt  README.md  package.xml  setup.py
steer_polaris_gem_e2/polaris_integration_tests/gem_performance_profiler/launch/: profile_pipeline.launch
steer_polaris_gem_e2/polaris_integration_tests/gem_performance_profiler/scripts/: analyze_rosbags.py  fake_get_model_state_node.py  run_error_timing_profiler.py
steer_polaris_gem_e2/polaris_integration_tests/gem_performance_profiler/src/gem_performance_profiler/: __init__.py  performance_scenarios.py
steer_polaris_gem_e2/polaris_state_manager/gem_state_manager/: CMakeLists.txt  package.xml
steer_polaris_gem_e2/polaris_state_manager/gem_state_manager/include/gem_state_manager/: ros_time_helpers.h  state_machine.h  state_manager.h  time.h
steer_polaris_gem_e2/polaris_state_manager/gem_state_manager/nodes/: state_manager_node.cpp
steer_polaris_gem_e2/polaris_state_manager/gem_state_manager/src/: state_manager.cpp
steer_polaris_gem_e2/polaris_state_manager/gem_state_manager/test/: state_manager_scenarios.test
steer_polaris_gem_e2/polaris_state_manager/gem_state_msgs/: CMakeLists.txt
steer_polaris_gem_e2/polaris_state_manager/gem_state_msgs/msg/: TemperatureStamped.msg
steer_polaris_gem_e2/polaris_task_planner/gem_controller_action/: package.xml  setup.py
steer_polaris_gem_e2/polaris_task_planner/gem_controller_action/action/: NavigateWaypoints.action
steer_polaris_gem_e2/polaris_task_planner/gem_controller_action/src/gem_controller_action/: controller_action_interface.py
steer_polaris_gem_e2/polaris_task_planner/gem_controller_action/srv/: ServeWaypoints.srv
steer_polaris_gem_e2/polaris_task_planner/gem_pure_pursuit_sim_v2/scripts/: pure_pursuit_sim.py
steer_polaris_gem_e2/polaris_task_planner/gem_task_planner/: CMakeLists.txt  package.xml
steer_polaris_gem_e2/polaris_task_planner/gem_task_planner/scripts/: task_planner_node.py
