<?xml version="1.0"?>
<package format="2">
  <name>gem_performance_profiler</name>
  <version>0.0.1</version>
  <description>Provides profiling simulation scenarios and analysis tools</description>

  <maintainer email="someshdaga94@gmail.com">Somesh Daga</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_pkg</build_depend>

  <exec_depend>gem_controller_action</exec_depend>
  <exec_depend>gem_integration_tests</exec_depend>
  <exec_depend>gem_state_manager</exec_depend>
  <exec_depend>gem_state_msgs</exec_depend>
  <exec_depend>gem_task_planner</exec_depend>
  <exec_depend>gem_pure_pursuit_sim_v2</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rospkg</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
  </export>
</package>
