<?xml version="1.0"?>
<package format="2">
  <name>gem_integration_tests</name>
  <version>0.0.0</version>
  <description>Integration tests and bringup launch for full stack</description>

  <maintainer email="ros@todo.todo">ros</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>gem_state_msgs</exec_depend>
  <exec_depend>gem_controller_action</exec_depend>
  <exec_depend>jsk_rviz_plugins</exec_depend>
  <exec_depend>gem_gazebo</exec_depend>
  <exec_depend>gem_state_manager</exec_depend>
  <exec_depend>gem_task_planner</exec_depend>
  <exec_depend>gem_pure_pursuit_sim_v2</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rqt_reconfigure</exec_depend>
  <test_depend>rostest</test_depend>
  <depend>dynamic_reconfigure</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <architecture_independent/>
  </export>
</package>
