<?xml version="1.0"?>
<package format="2">
  <name>gem_controller_action</name>
  <version>0.0.1</version>
  <description>Provides action interface for waypoint navigation</description>

  <maintainer email="someshdaga94@gmail.com">Somesh Daga</maintainer>
  <license>Proprietary</license>
  <author email="someshdaga94@gmail.com">Somesh Daga</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
